Routing between login and register successful.

--- a/clp-project-fe/src/app/components/login-page/login-page.component.html
+++ b/clp-project-fe/src/app/components/login-page/login-page.component.html
@@ -12,8 +12,8 @@
         </div>
 
         <div>
-            <button class="btn w-25 btn-success" >Login</button>
-            <button class="btn w-25 btn-primary" >Register</button>
+            <button class="btn w-25 btn-success" (click)="onSubmit()">Login</button>
+            <button class="btn w-25 btn-primary" (click)="register()">Register</button>
         </div>
     </form>
 
