--- a/clp-project-fe/src/app/components/register-page/register-page.component.html
+++ b/clp-project-fe/src/app/components/register-page/register-page.component.html
@@ -37,4 +37,13 @@
     
         <div *ngIf="registerFail == true">There was an error processing your request</div>
       </form>
+
+
+      <div class="row mx-auto col-md-8 p-0 m-0 d-flex justify-content-center">
+        <button class="btn btn-primary col-5 col-md-3 mr-3"  [disabled]="!registerForm.valid" (click)="onSubmit()">Register</button>
+        <button class="btn btn-primary col-5 col-md-3"  [routerLink]="['/login']">Login</button>
+      </div>
+
+
+
 </div>
