Working on home page

--- a/clp-project-fe/src/app/components/home-page/home-page.component.html
+++ b/clp-project-fe/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,10 @@
-<p>home-page works!</p>
+<div>
+    <h1>Welcome </h1>
+    <br>
+    <p>User Info:</p>
+    <ul>
+        <li>Fisrt name: {{currUser.firstName}}</li>
+        <li>Last name: {{currUser.lastName}}</li>
+        <li>Email: {{currUser.email}}</li>
+    </ul>
+</div>
